--- a/public/monitor.html
+++ b/public/monitor.html
@@ -23,7 +23,7 @@
             padding-right: 0px;
             margin-left: 10px;
             margin-right: 10px;
-            height: 363px;
+            height: 367px;
             border: 4px solid blue;
 
         }
@@ -154,7 +154,7 @@
                         <li><a href="./learn.html">Learn</a></li>
                         <li><a href="./monitor.html">Monitor</a></li>
                         <li><a href="./manage.html">Manage</a></li>
-                        <li><a href="./signin.html">Shop</a></li>
+                        <li><a href="./signin.html">Sign In</a></li>
                     </ul>
                 </div>
             </div>
@@ -165,6 +165,58 @@
 
 <main>
 
+    <script>
+
+        window.onload = function() {
+            // x functionality when window loads
+
+
+            function getLocation() {
+                if (navigator.geolocation) {
+                    navigator.geolocation.getCurrentPosition(showPosition, showError);
+                } else {
+                    x.innerHTML = "Geolocation is not supported by this browser.";
+                }
+            };
+
+            function showPosition(position) {
+                var latitude  = position.coords.latitude;
+                var longitude = position.coords.longitude;
+            };
+
+            function showError(error) {
+                switch (error.code) {
+                    case error.PERMISSION_DENIED:
+                        x.innerHTML = "User denied the request for Geolocation."
+                        break;
+                    case error.POSITION_UNAVAILABLE:
+                        x.innerHTML = "Location information is unavailable."
+                        break;
+                    case error.TIMEOUT:
+                        x.innerHTML = "The request to get user location timed out."
+                        break;
+                    case error.UNKNOWN_ERROR:
+                        x.innerHTML = "An unknown error occurred."
+                        break;
+                }
+            };
+
+            var socket = io.connect();
+
+            var latlong = {lat: latitude, long: longitude};
+
+            socket.emit("latlong", latlong);
+
+
+            socket.on("number", function (RHin) {
+
+                console.log(RHin);
+
+                document.getElementById("message").innerHTML = RHin;
+
+            });
+        };
+    </script>
 
     <div id="container">
 
@@ -224,6 +276,9 @@
     </script>
 
 
+
+
+
     <div class="container">
 
 
@@ -244,8 +299,8 @@
                     var cat = ["Very High", "High",'Moderate',"Low",'Very Low'];
                     var curr_date = moment().format("dddd MMM D");
                     document.getElementById("date").innerHTML = curr_date;
-                    document.getElementById("m1").style.backgroundColor = hydr[2];
-                    document.getElementById("category").innerHTML = cat[2];
+                    document.getElementById("m1").style.backgroundColor = hydr[0];
+                    document.getElementById("category").innerHTML = cat[0];
                 </script>
             </div>
             <div class="col-lg-3 col-sm-4 main">
