--- a/public/monitor.html
+++ b/public/monitor.html
@@ -27,54 +27,57 @@
             border: 4px solid blue;
 
         }
-        .scale {
 
-
-            float: left;
-
-        }
-        .scale-scale1 {
-            width: 45px;
-            height: 28px;
-            border-left: 2px solid blue;
-            float: left;
-            position: relative;
-            background: #6BA2FA;
-        }
-        .scale-scale2 {
-            width: 45px;
-            height: 28px;
-            border-left: 2px solid blue;
-            float: left;
-            position: relative;
-            background: #abdda4;
-        }
-        .scale-scale3 {
-            width: 45px;
-            height: 28px;
-            border-left: 2px solid blue;
-            float: left;
-            position: relative;
-            background: #ffffbf;
-        }
-        .scale-scale4 {
-            width: 45px;
-            height: 28px;
-            border-left: 2px solid blue;
-            float: left;
-            position: relative;
-            background: #fdae61;
-        }
-        .scale-scale5 {
-            width: 45px;
-            height: 28px;
-            border-left: 2px solid blue;
-            float: left;
-            position: relative;
-            background: #d7191c;
-        }
     </style>
 
+    <script type="text/javascript"
+            src="https://www.google.com/jsapi?autoload={
+            'modules':[{
+              'name':'visualization',
+              'version':'1',
+              'packages':['corechart']
+            }]
+          }">
+
+    </script>
+
+    <script type="text/javascript">
+        google.setOnLoadCallback(drawChart);
+
+        function drawChart() {
+            var data = google.visualization.arrayToDataTable([
+                ['Year', 'Sales', 'Expenses'],
+                ['2004',  1000,      400],
+                ['2005',  1170,      460],
+                ['2006',  660,       1120],
+                ['2007',  1030,      540]
+            ]);
+
+            var options = {
+                title: 'Company Performance',
+                curveType: 'function',
+                legend: { position: 'bottom' }
+            };
+
+            var chart = new google.visualization.LineChart(document.getElementById('curve_chart'));
+
+            chart.draw(data, options);
+            function resizeCharts () {
+                // redraw charts, dashboards, etc here
+                chart.draw(data, options);
+            }
+            if (window.addEventListener) {
+                window.addEventListener('resize', resizeCharts);
+            }
+            else if (window.attachEvent) {
+                window.attachEvent('onresize', resizeCharts);
+            }
+            else {
+                window.onresize = resizeCharts;
+            }
+
+        }
+    </script>
 
 </head>
 <body class="container">
@@ -84,6 +87,9 @@
         <nav class="navbar navbar-default">
             <div class="container-fluid">
                 <div class="navbar-header">
+                    <a class="navbar-brand" href="#">
+                        <img alt="Brand" src="/images/brandicon.png">
+                    </a>
                     <button type="button" class="navbar-toggle" data-toggle="collapse"
                             data-target="#navbar">
                         <span class="sr-only">Toggle navigation</span>
@@ -98,7 +104,7 @@
                         <li><a href="./learn.html">Learn</a></li>
                         <li><a href="./monitor.html">Monitor</a></li>
                         <li><a href="./manage.html">Manage</a></li>
-                        <li><a href="./signin.html">Sign In</a></li>
+                        <li><a href="./signin.html">ALERTS</a></li>
                     </ul>
                 </div>
             </div>
@@ -126,7 +132,6 @@
     </script>
 
 
-
     <div class="container">
 
 
@@ -147,274 +152,53 @@
                     <img id="catimage"  class="img-thumbnail">
             </div>
                 </div>
+            <script type="text/javascript">
+                var socket = io.connect();
+                socket.on("number", function(type) {
+
+                    if (type=4) {
+                        document.getElementById("catimage").src = "/images/verylow.png";
+                    }
+                    else if (type=3) {
+                        document.getElementById("catimage").src = "/images/low.png";
+                    }
+                    else if (type=2) {
+                        document.getElementById("catimage").src = "/images/moderate.png";
+                    }
+                    else if (type=1) {
+                        document.getElementById("catimage").src = "/images/high.png";
+                    }
+                    else if (type=0) {
+                        document.getElementById("catimage").src = "/images/veryhigh.png";
+                    }
+
+                });
+
+            </script>
 
 
             <div class="col-sm-6 col-md-6">
                 <div class="thumbnail">
                     <div class="item1">
 
-                        <h4>Parks and Recreation Areas</h4></a>
-
+                        <h2>Humidity Forecasts</h2></a>
+                        <div id="curve_chart"  style=" height: 500px" ></div>
                     </div>
                 </div>
             </div>
 
 
-                <script type="text/javascript">
-                    var socket = io.connect();
-                    socket.on("number", function(type) {
-
-                        if (type=0) {
-                            document.getElementById("catimage").src = "/images/verylow.png";
-                        }
-                        else if (type=1) {
-                            document.getElementById("catimage").src = "/images/low.png";
-                        }
-                        else if (type=2) {
-                            document.getElementById("catimage").src = "/images/moderate.png";
-                        }
-                        else if (type=3) {
-                            document.getElementById("catimage").src = "/images/high.png";
-                        }
-                        else if (type=4) {
-                            document.getElementById("catimage").src = "/images/veryhigh.png";
-                        }
-
-                    });
-
-                </script>
 
 
-            </div>
-            <div class="col-lg-3 col-sm-4 main">
-                <h3>SIGN UP FOR SKIN HYDRATION ALERTS</h3>
-                <h5>Get an email every Sunday whenever low skin hydration potentials are forecast for the week ahead</h5>
-            </div>
-            <div class="col-lg-3 col-sm-4 main">
-                <h3>Synopsis of 10-Day Skin Hydration Forecast</h3>
 
-                <div class="progress">
-
-                    <div class="progress-bar progress-bar-success" role="progressbar" aria-valuenow="40" aria-valuemin="0" aria-valuemax="100" style="width: 40%">
-                        40% Humid
-                    </div>
-                </div>
-
-                <div class="progress">
-                    <div class="progress-bar progress-bar-info" role="progressbar" aria-valuenow="20" aria-valuemin="0" aria-valuemax="100" style="width: 5%">
-                        5% High
-                    </div>
-                </div>
-                <div class="progress">
-                    <div class="progress-bar progress-bar-warning" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 60%">
-                        60% Medium
-                    </div>
-                </div>
-                <div class="progress">
-                    <div class="progress-bar progress-bar-warning" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 0%">
-                        0% Low
-                    </div>
-                </div>
-                <div class="progress">
-                    <div class="progress-bar progress-bar-warning" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 60%">
-                        60% Dry
-                    </div>
-                </div>
-            </div>
-
-        </div>
     </div>
 
 
 
-    <div class="container">
 
-        <div class="row">
-
-            <div class="col-lg-10">
-                <h1 class="page-header">Ten-Day Forecast of Skin Hydration Potentials</h1>
-            </div>
-
-            <div class="col-lg-3 col-md-4 col-xs-6 thumb" id="d1">
-                <h3 id = "date1"></h3>
-                <script>
-                    var curr_date = moment().add(1,"d").format("ddd MMM D");
-                    document.getElementById("date1").innerHTML = curr_date;
-                    document.getElementById("d1").style.backgroundColor = hydr[0];
-                </script>
-                <div class="scale">
-                    <div class = "scale-scale1"><h5 align="center">Humid</h5></div>
-                    <div class = "scale-scale2"><h5 align="center">High</h5></div>
-                    <div class = "scale-scale3"><h5 align="center">Med</h5></div>
-                    <div class = "scale-scale4"><h5 align="center">Low</h5></div>
-                    <div class = "scale-scale5"><h5 align="center">Dry</h5></div>
-                </div>
-            </div>
-            <div class="col-lg-3 col-md-4 col-xs-6 thumb" id="d2">
-                <h3 id = "date2"></h3>
-                <script>
-                    var curr_date = moment().add(2,"d").format("ddd MMM D");
-                    document.getElementById("date2").innerHTML = curr_date;
-                    document.getElementById("d2").style.backgroundColor = hydr[1];
-                </script>
-
-                <div class="scale">
-                    <div class = "scale-scale1"><h5 align="center">Humid</h5></div>
-                    <div class = "scale-scale2"><h5 align="center">High</h5></div>
-                    <div class = "scale-scale3"><h5 align="center">Med</h5></div>
-                    <div class = "scale-scale4"><h5 align="center">Low</h5></div>
-                    <div class = "scale-scale5"><h5 align="center">Dry</h5></div>
-                </div>
-            </div>
-
-            <div class="col-lg-3 col-md-4 col-xs-6 thumb" id="d3">
-                <h3 id = "date3"></h3>
-                <script>
-                    var curr_date = moment().add(3,"d").format("ddd MMM D");
-                    document.getElementById("date3").innerHTML = curr_date;
-                    document.getElementById("d3").style.backgroundColor = hydr[2];
-                </script>
-                <div class="scale">
-                    <div class = "scale-scale1"><h5 align="center">Humid</h5></div>
-                    <div class = "scale-scale2"><h5 align="center">High</h5></div>
-                    <div class = "scale-scale3"><h5 align="center">Med</h5></div>
-                    <div class = "scale-scale4"><h5 align="center">Low</h5></div>
-                    <div class = "scale-scale5"><h5 align="center">Dry</h5></div>
-                </div>
-            </div>
-            <div class="col-lg-3 col-md-4 col-xs-6 thumb" id="d4">
-                <h3 id = "date4"></h3>
-                <script>
-                    var curr_date = moment().add(4,"d").format("ddd MMM D");
-                    document.getElementById("date4").innerHTML = curr_date;
-                    document.getElementById("d4").style.backgroundColor = hydr[3];
-                </script>
-                <div class="scale">
-                    <div class = "scale-scale1"><h5 align="center">Humid</h5></div>
-                    <div class = "scale-scale2"><h5 align="center">High</h5></div>
-                    <div class = "scale-scale3"><h5 align="center">Med</h5></div>
-                    <div class = "scale-scale4"><h5 align="center">Low</h5></div>
-                    <div class = "scale-scale5"><h5 align="center">Dry</h5></div>
-                </div>
-            </div>
-            <div class="col-lg-3 col-md-4 col-xs-6 thumb" id="d5">
-                <h3 id = "date5"></h3>
-                <script>
-                    var curr_date = moment().add(5,"d").format("ddd MMM D");
-                    document.getElementById("date5").innerHTML = curr_date;
-                    document.getElementById("d5").style.backgroundColor = hydr[4];
-                </script>
-                <div class="scale">
-                    <div class = "scale-scale1"><h5 align="center">Humid</h5></div>
-                    <div class = "scale-scale2"><h5 align="center">High</h5></div>
-                    <div class = "scale-scale3"><h5 align="center">Med</h5></div>
-                    <div class = "scale-scale4"><h5 align="center">Low</h5></div>
-                    <div class = "scale-scale5"><h5 align="center">Dry</h5></div>
-                </div>
-            </div>
-            <div class="col-lg-3 col-md-4 col-xs-6 thumb" id="d6">
-                <h3 id = "date6"></h3>
-                <script>
-                    var curr_date = moment().add(6,"d").format("ddd MMM D");
-                    document.getElementById("date6").innerHTML = curr_date;
-                    document.getElementById("d6").style.backgroundColor = hydr[0];
-                </script>
-                <div class="scale">
-                    <div class = "scale-scale1"><h5 align="center">Humid</h5></div>
-                    <div class = "scale-scale2"><h5 align="center">High</h5></div>
-                    <div class = "scale-scale3"><h5 align="center">Med</h5></div>
-                    <div class = "scale-scale4"><h5 align="center">Low</h5></div>
-                    <div class = "scale-scale5"><h5 align="center">Dry</h5></div>
-                </div>
-            </div>
-            <div class="col-lg-3 col-md-4 col-xs-6 thumb" id="d7">
-                <h3 id = "date7"></h3>
-                <script>
-                    var curr_date = moment().add(7,"d").format("ddd MMM D");
-                    document.getElementById("date7").innerHTML = curr_date;
-                    document.getElementById("d7").style.backgroundColor = hydr[2];
-                </script>
-                <div class="scale">
-                    <div class = "scale-scale1"><h5 align="center">Humid</h5></div>
-                    <div class = "scale-scale2"><h5 align="center">High</h5></div>
-                    <div class = "scale-scale3"><h5 align="center">Med</h5></div>
-                    <div class = "scale-scale4"><h5 align="center">Low</h5></div>
-                    <div class = "scale-scale5"><h5 align="center">Dry</h5></div>
-                </div>
-            </div>
-            <div class="col-lg-3 col-md-4 col-xs-6 thumb" id="d8">
-                <h3 id = "date8"></h3>
-                <script>
-                    var curr_date = moment().add(8,"d").format("ddd MMM D");
-                    document.getElementById("date8").innerHTML = curr_date;
-                    document.getElementById("d8").style.backgroundColor = hydr[4];
-                </script>
-                <div class="scale">
-                    <div class = "scale-scale1"><h5 align="center">Humid</h5></div>
-                    <div class = "scale-scale2"><h5 align="center">High</h5></div>
-                    <div class = "scale-scale3"><h5 align="center">Med</h5></div>
-                    <div class = "scale-scale4"><h5 align="center">Low</h5></div>
-                    <div class = "scale-scale5"><h5 align="center">Dry</h5></div>
-                </div>
-            </div>
-            <div class="col-lg-3 col-md-4 col-xs-6 thumb" id="d9">
-                <h3 id = "date9"></h3>
-                <script>
-                    var curr_date = moment().add(9,"d").format("ddd MMM D");
-                    document.getElementById("date9").innerHTML = curr_date;
-                    document.getElementById("d9").style.backgroundColor = hydr[3];
-                </script>
-                <div class="scale">
-                    <div class = "scale-scale1"><h5 align="center">Humid</h5></div>
-                    <div class = "scale-scale2"><h5 align="center">High</h5></div>
-                    <div class = "scale-scale3"><h5 align="center">Med</h5></div>
-                    <div class = "scale-scale4"><h5 align="center">Low</h5></div>
-                    <div class = "scale-scale5"><h5 align="center">Dry</h5></div>
-                </div>
-            </div>
-            <div class="col-lg-3 col-md-4 col-xs-6 thumb" id="d10">
-                <h3 id = "date10"></h3>
-                <script>
-                    var curr_date = moment().add(10,"d").format("ddd MMM D");
-                    document.getElementById("date10").innerHTML = curr_date;
-                    document.getElementById("d10").style.backgroundColor = hydr[4];
-                </script>
-                <div class="scale">
-                    <div class = "scale-scale1"><h5 align="center">Humid</h5></div>
-                    <div class = "scale-scale2"><h5 align="center">High</h5></div>
-                    <div class = "scale-scale3"><h5 align="center">Med</h5></div>
-                    <div class = "scale-scale4"><h5 align="center">Low</h5></div>
-                    <div class = "scale-scale5"><h5 align="center">Dry</h5></div>
-                </div>
-            </div>
-
-        </div>
 
 </main>
-<script type="text/javascript">
-    //Autocomplete variables
-    var input = document.getElementById('location');
-    var searchform = document.getElementById('form1');
-    var place;
-    var autocomplete = new google.maps.places.Autocomplete(input);
 
-    google.maps.event.addListener(autocomplete, 'place_changed', function () {
-        place = autocomplete.getPlace();
-        //console.log(place);
-    });
-
-    searchform.addEventListener("submit", function() {
-        var newlatlong = new google.maps.LatLng(place.geometry.location.lat(),place.geometry.location.lng());
-        document.getElementById('lat').innerHTML = place.geometry.location.lat();
-        document.getElementById('long').innerHTML = place.geometry.location.lng();
-
-    });
-
-    input.addEventListener('click', function(){
-        input.value = "";
-    });
-
-</script>
 
 
 <footer>
