--- a/public/index.html
+++ b/public/index.html
@@ -15,6 +15,9 @@
     <nav class="navbar navbar-default">
         <div class="container-fluid">
             <div class="navbar-header">
+                <a class="navbar-brand" href="#">
+                    <img alt="Brand" src="/images/brandicon.png">
+                </a>
                 <button type="button" class="navbar-toggle" data-toggle="collapse"
                         data-target="#navbar">
                     <span class="sr-only">Toggle navigation</span>
@@ -29,7 +32,7 @@
                     <li><a href="./learn.html">Learn</a></li>
                     <li><a href="./monitor.html">Monitor</a></li>
                     <li><a href="./manage.html">Manage</a></li>
-                    <li><a href="./signin.html">Shop</a></li>
+                    <li><a href="./signin.html"><strong>ALERTS</strong></a></li>
                 </ul>
             </div>
         </div>
@@ -52,7 +55,8 @@
             <div class="col-xs-6 col-sm-6">
                 <div class="centered">
                     <a href="./monitor.html"><h2>Monitor</h2></a>
-                    <h4>Track the indoor air conditions that can lead to dry skin</h4>
+                    <h4>Track the indoor air conditions that can lead to dry skin  <button type="button" class="btn btn-primary btn-xs">Get ALERTS</button></h4>
+
                 </div>
             </div>
         </div>
@@ -60,7 +64,7 @@
             <div class="col-xs-6 col-sm-6">
                 <div class="centered">
                     <a href="./manage.html"><h2>Manage</h2></a>
-                    <h4>Implement skin-care options commensurate with the drying stresses on skin</h4>
+                    <h4>Implement skin-care options commensurate with the drying stresses on your skin</h4>
                 </div>
             </div>
             <div class="col-xs-6 col-sm-6">
