--- a/public/manage.html
+++ b/public/manage.html
@@ -15,6 +15,9 @@
     <nav class="navbar navbar-default">
         <div class="container-fluid">
             <div class="navbar-header">
+                <a class="navbar-brand" href="#">
+                    <img alt="Brand" src="/images/brandicon.png">
+                </a>
                 <button type="button" class="navbar-toggle" data-toggle="collapse"
                         data-target="#navbar">
                     <span class="sr-only">Toggle navigation</span>
@@ -29,7 +32,7 @@
                     <li><a href="./learn.html">Learn</a></li>
                     <li><a href="./monitor.html">Monitor</a></li>
                     <li><a href="./manage.html">Manage</a></li>
-                    <li><a href="./signin.html">Shop</a></li>
+                    <li><a href="./signin.html">ALERTS</a></li>
                 </ul>
             </div>
         </div>
